--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -21,8 +21,8 @@ body {
 
 textarea {
   width: 50%;
-  min-height: 100px;
-  padding: 10px;
+  min-height: 6.25rem;
+  padding: 1rem;
   font-size: 1em;
   border-radius: 4px;
   border: 1px solid var(--grey);
@@ -184,7 +184,7 @@ textarea::placeholder {
   padding: 1rem;
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .accordion-comment-section {
@@ -302,6 +302,12 @@ textarea::placeholder {
   flex-direction: column;
 }
 
+.game-details-game-details {
+  width: 13rem;
+  height: 30rem;
+  /* border: 2px solid blue; */
+}
+
 .game-details-game-description {
   display: flex;
   width: 100%;
@@ -323,7 +329,7 @@ textarea::placeholder {
 .game-details-game-details {
   text-align: center;
   padding: 2rem;
-  width: 30%;
+  width: 50rem;
   border: 0.125rem solid #93989F;
   width: 20rem;
   box-shadow: 0.5rem 0.5rem 1rem rgba(0,0,0,0.3);
@@ -342,21 +348,21 @@ textarea::placeholder {
 
 .game-details-categories-selection {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
   width: 100%;
   margin-top: 2rem;
   justify-items: center;
   padding-bottom: 5rem;
   padding-top: 2rem;
   gap: 1rem; 
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .game-details-button-link {
   width: 13rem;
   background: #17A2B8;
   color: #F8F9FA;
-  padding: 10px 20px;
+  padding: 1rem 1.25rem;
   border-radius: 5px;
   text-decoration: none;
   text-align: center;
@@ -477,7 +483,7 @@ header {
   justify-content: center;
   align-items: center;
   background-color: var(--metal);
-  border-radius: 10px;
+  border-radius: 1rem;
   box-shadow: 0 0 10px 0 var(--grey);
   width: 40rem;
   margin: auto;
@@ -628,7 +634,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  border: 2px solid green; 
+  /* border: 2px solid green;  */
 }
 
 /* #card */
@@ -648,7 +654,7 @@ header {
 
 .featured-games-card {
   height: 22.5rem;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .articles-card-heading {
@@ -765,7 +771,7 @@ header {
   justify-content: center;
   padding: 1.5rem;
   background-color: var(--metal);
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .form-container, .profile-image-container {
@@ -1098,12 +1104,6 @@ footer h3, footer p {
   }
 }
 
-.game-details-game-details {
-  width: 13rem;
-  height: 30rem;
-  border: 2px solid blue;
-}
-
 @media (max-width: 500px) {
   .homepage-introduction-section p:nth-of-type(2){
     width: 15rem;
@@ -1194,7 +1194,7 @@ footer h3, footer p {
     display: block;
     width: 100%;
     margin: 0 auto;
-    border: 2px solid green;
+    /* border: 2px solid green; */
   }
   .browse-container h2 {
     font-size: 1rem;
