--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -109,6 +109,12 @@ textarea::placeholder {
   text-align: center;
 }
 
+.game-categories-container h4 {
+ color: white;
+}
+
+
+
 .game-categories-container img {
   width: 25rem;
 }
@@ -136,6 +142,10 @@ textarea::placeholder {
   height: 6rem;
   object-fit: cover;
   border-radius: 50%;
+}
+
+.post-text-section p {
+  color: white;
 }
 
 .like-button-section {
@@ -177,6 +187,14 @@ textarea::placeholder {
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
   /* border: 1px solid red; */
+}
+
+.comment-text-section {
+  margin-left: 1rem;
+}
+
+.comment-text-section p {
+  color: white
 }
 
 .accordion-comment-section {
@@ -421,7 +439,6 @@ textarea::placeholder {
   width: 100vw;
   margin-top: -1rem;
   margin-left: -4rem;
-  /* margin-right: 1rem; */
   background-size: cover; 
   background-position: center; 
   position: relative;
@@ -436,8 +453,7 @@ textarea::placeholder {
   right: 0;
   bottom: 0;
   left: 0;
-
-  background: rgba(0, 0, 0, 0.65); /* This is the overlay, adjust color and opacity as needed */
+  background: rgba(0, 0, 0, 0.65);
 }
 
 .hero-content-container {
@@ -472,14 +488,6 @@ header {
 
 .nav-link:last-of-type {
   margin-right: 2rem;
-}
-
-:root {
-  --white: #F8F9FA;
-  --metal: #2E2E2E;
-  --blue: #17A2B8;
-  --black: #000000;
-  --grey: #93989F;
 }
 
 .nav-link:hover {
@@ -647,6 +655,8 @@ header {
   margin-top:1rem;
   margin-left: 2rem;
   border: 2px solid var(--blue);
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px var(--blue);
 }
 
 .quick-sign-up-info p {
@@ -655,7 +665,7 @@ header {
 
 .info-group {
   margin: 0;
-  padding: 0;
+  padding: 1rem;
 }
 
 .info-title {
@@ -692,9 +702,7 @@ header {
 }
 
 /* #card */
-/* .featured-games-card, */
  .articles-card {
-  /* position: relative; */
   height: auto;
   border: 0.125rem solid var(--grey);
   min-width: 20rem;
@@ -710,7 +718,6 @@ header {
 .featured-games-card {
   height: 22.5rem;
   /* border: 2px solid red; */
-
 }
 
 .featured-games-card-heading, .articles-card-heading {
@@ -788,11 +795,6 @@ header {
   padding: 0rem 1rem;
 }
 
-/* .carousel {
-  position: relative;
-  height: 15rem;  
-} */
-
 .carousel-caption p {
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -821,14 +823,12 @@ header {
   top: 0rem;
   left: 0;
   opacity: 1;
-  /* margin-left: 5rem; */
 }
 
 .carousel-control-next {
   top: 0rem;
   right: 0;
   opacity: 1;
-  /* margin-right: 5rem; */
 }
 
 .carousel-control-next-icon {
